--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Wisdom Pet App",
-  "short_name": "PetApp",
+  "name": "Agmicom",
+  "short_name": "online profile",
   "icons": [
     {
       "src": "images/icons/icon-128x128.png",
