--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "type": "git",
     "url": "https://github.com/planetoftheweb/progressive.git"
   },
-  "author": "Ray Villalobos",
+  "author": "Mick White",
   "devDependencies": {
     "browserify": "^13.1.0",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^2.0.13",
     "gulp-concat-css": "^2.3.0",
@@ -29,8 +30,6 @@
     "sw-precache": "^4.2.1"
   },
   "dependencies": {
-    "bourbon": "^4.0.0",
-    "bourbon-neat": "^3.0.1",
     "handlebars": "^4.0.5",
     "sass": "^1.17.2"
   }
