--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "progressive",
   "version": "1.0.0",
-  "description": "Project for my Progressive Web Apps course on Lynda.com/LinkedIn Learning",
+  "description": "Project for Progressive Web App",
   "scripts": {
     "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/planetoftheweb/progressive.git"
+    "url": "https://github.com/codebymick/progressive.git"
   },
   "author": "Mick White",
   "devDependencies": {
