--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Mick White",
-  "short_name": "online profile",
+  "name": "Mick White Web Developer",
+  "short_name": "Mick White",
   "icons": [
     {
       "src": "images/icons/icon-128x128.png",
